--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
   
         <h3 class="btn btn-primary heading">Web Gesture App
           <br>
-          <span></span>
-          <span> </span>
-          <span> </span>
-          <span> </span>
-          <span> </span>
-          <span> </span>
+          <span>&#128076;</span>
+          <span>&#128077;</span>
+          <span>&#9996;</span>
   
         </h3>
         <br><br>
